make calc button pink

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 		}
 
 		.btn-calculate {
-			background: linear-gradient(135deg, #0099ff 0%, #56a1d6 100%);
+			background: linear-gradient(135deg, #0099ff 0%, #d056d6 100%);
 			color: white;
 			width: 100%;
 			padding: 18px;
